# mario

./: .gitignore  CMakeLists.txt  flake.nix  stellaconf.yaml
include/: alloc.hpp  collection_adapters.hpp  localize.hpp  mapping.hpp  mario.hpp  nav.hpp  pid.hpp  serial.hpp  slam.hpp  states.hpp  tarzan.hpp  utils.hpp  yolo.hpp
lib/: mario.hpp
model/: labels.names
src/: alloc.cpp  localize.cc  localize.cpp  mapping.cpp  mario.cpp  nav.cpp  pid.cpp  serial.cpp  serialib.cpp  slam.cpp  states.cpp  tarzan.cpp  utils.cpp
